# motor-tuner

./: pyproject.toml
src/motor_tuner/: code.py  crc.py  modbus.py
src/motor_tuner/modbus/: framer.py  register_bank.py  rtu_framer.py
tests/: test_crc.py  test_modbus.py
tests/modbus/: test_crc.py  test_register_bank.py  test_rtu_framer.py
