[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motor-tuner"
version = "0.0.0"
description = ''
requires-python = ">=3.12"
license = "MIT"
keywords = []
dependencies = []

[tool.hatch.envs.default]
python = "3.12"

[tool.hatch.envs.dev]
dependencies = [
    "black",
    "circuitpython-stubs",
    "isort",
    "mypy",
    "pylama",
    "pytest",
    "setuptools",
]

[tool.hatch.envs.dev.scripts]
format = [
       "isort --color .",
       "black .",
]

check = [
      "pylama --ignore E203 .", # E203 is not pep8-compliant, and black breaks it
      "mypy --strict --pretty .",
]

test = "pytest"

all = [
    "format",
    "check",
    "test",
]